# FreeRTOS-POSIX-CMake

./: README.md
apps/blinky/: CMakeLists.txt  README.md
apps/blinky/include/: FreeRTOSConfig.h
apps/blinky/src/: console.c  console.h  main.c  main_blinky.c
cmake/: freertos.posix.cmake
